data/derived/fa15/progs/unify/prog0043.ml.out
Characters 23-29:
  let helperAppend l n = (0::l)
                         ^^^^^^
Error: This expression has type int list
       This is not a function; it cannot be applied.
